# online-mart

./: docker-compose.yaml  getway-initializer.sh
.github/workflows/: deploy.yml
docs/: frontend.md
docs/backend/: Readme.md
docs/custom-gpt/: Readme.md  instruction.txt  openapi.json
inventory-service/: .env  Dockerfile  pyproject.toml
inventory-service/app/: db.py  main.py  models.py  product.proto  product_pb2.py  settings.py
inventory-service/app/api/: api.py  deps.py
inventory-service/app/api/routes/: admin.py  enpoints.py  user.py
inventory-service/app/core/: controllers.py  crud.py  kafka_schema.py
notification-services/: .env  Dockerfile  pyproject.toml
notification-services/app/: main.py  models.py  setting.py  template_config.py
notification-services/app/core/: kafka_schema.py  notification.py
notification-services/templates/: approve.html  custom.html  login.html  ordercomplete.html  orderplace.html  register.html
openapi-merge-spec/: .env  Dockerfile  pyproject.toml
openapi-merge-spec/app/: auth_config.py  main.py  models.py  settings.py
openapi-merge-spec/app/routes/: order_routes.py  product_routes.py
order-service/: .env  .gitignore  Dockerfile  pyproject.toml
order-service/app/: db.py  main.py  models.py  order.proto  order_pb2.py  settings.py
order-service/app/api/: api.py  deps.py
order-service/app/api/routes/: admin.py  user.py
order-service/app/core/: crud.py  kafka_order.py  kafka_schema.py
order-service/tests/: test_main.py
payment-service/: .env  Dockerfile  pyproject.toml
payment-service/app/: db_config.py  depends.py  main.py  models.py  payment.proto  payment_pb2.py  settings.py
payment-service/app/api/v1/: api.py
payment-service/app/api/v1/endpoint/: cash_delivery.py  payment_endpoint.py
payment-service/app/core/: crud.py  kafka.py  kafka_controllers.py
payment-service/app/routes/: payment_routes.py
payment-service/tests/: test_main.py
product-service/: .env  Dockerfile  pyproject.toml
product-service/app/: db.py  main.py  models.py  product.proto  product_pb2.py  settings.py
product-service/app/api/: api.py  (+1 more)
product-service/tests/: test_main.py
user-service/: .env  Dockerfile  pyproject.toml
user-service/.github/workflows/: deploy.yml
user-service/app/: db.py  main.py  models.py  settings.py
user-service/app/api/: api.py  deps.py
user-service/app/api/routes/: admin.py  auth_crud.py  health.py  login.py  signup.py
user-service/app/core/: admin.py  auth.py  crud.py  kafka.py  kong.py  token.py
user-service/tests/: test_main.py
(+5 files in other folders)
