[tool.poetry]
name = "user-service"
version = "0.1.0"
description = ""
authors = ["Hammad-Rehman <124163466+developer-hammad-rehman@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
aiokafka = "^0.10.0"
sqlmodel = "^0.0.19"
psycopg2 = "^2.9.9"
passlib = {extras = ["bycrpt"], version = "^1.7.4"}
python-jose = "^3.3.0"
bcrypt = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
